# rust-on-frontend-demo

./: Cargo.toml  index.html
docs/: index-690f0c810fe3992c_bg.wasm  index.html
src/: main.rs
